// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden report snapshots > keeps Besu-style trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/besu-debug-structlogs.json"
  },
  "summary": {
    "risk": "low",
    "findingCount": 1,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 1,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps ENS Registry runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/ens-registry-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 4,
    "highCount": 0,
    "mediumCount": 2,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.state-account-opcode-exposure",
      "title": "State and account access opcodes are prominent in bytecode",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.",
      "evidence": [
        {
          "sensitiveOpcodeCount": 63,
          "opcodeCounts": {
            "SLOAD": 25,
            "SSTORE": 6,
            "EXTCODESIZE": 3,
            "SHA3": 29
          }
        }
      ],
      "recommendation": "Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available."
    },
    {
      "id": "bytecode.storage-heavy-pattern",
      "title": "Storage-related opcodes appear frequently",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8038"
      ],
      "description": "This bytecode contains many storage-related opcodes. Glamsterdam gas repricing candidates may change the cost profile of storage-heavy execution.",
      "evidence": [
        {
          "SLOAD": 25,
          "SSTORE": 6,
          "storageOps": 31
        }
      ],
      "recommendation": "Replay representative storage-heavy transactions against a Glamsterdam devnet or fork configuration when available."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 0,
          "LOG2": 6,
          "LOG3": 2,
          "LOG4": 0
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 5346,
          "opcodeKinds": 71
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps ERC-4337 EntryPoint runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/erc4337-entrypoint-v06-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 6,
    "highCount": 0,
    "mediumCount": 3,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.contract-size-near-current-limit",
      "title": "Bytecode is near the current deployed contract size limit",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "EIP-7954"
      ],
      "description": "The bytecode is close to today's deployed runtime size limit. Contract-size proposals may change what is possible, but large bytecode still deserves deployment and tooling review.",
      "evidence": [
        {
          "byteLength": 23689,
          "currentRuntimeLimitBytes": 24576
        }
      ],
      "recommendation": "Add this contract to fork-readiness tests and verify deployment, verification, explorer, and build-pipeline behavior under any Glamsterdam devnet configuration."
    },
    {
      "id": "bytecode.state-account-opcode-exposure",
      "title": "State and account access opcodes are prominent in bytecode",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.",
      "evidence": [
        {
          "sensitiveOpcodeCount": 99,
          "opcodeCounts": {
            "SLOAD": 40,
            "SSTORE": 19,
            "EXTCODESIZE": 12,
            "SHA3": 28
          }
        }
      ],
      "recommendation": "Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available."
    },
    {
      "id": "bytecode.calldata-copy-exposure",
      "title": "Calldata copy opcode is present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.",
      "evidence": [
        {
          "CALLDATACOPY": 4
        }
      ],
      "recommendation": "Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known."
    },
    {
      "id": "bytecode.storage-heavy-pattern",
      "title": "Storage-related opcodes appear frequently",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8038"
      ],
      "description": "This bytecode contains many storage-related opcodes. Glamsterdam gas repricing candidates may change the cost profile of storage-heavy execution.",
      "evidence": [
        {
          "SLOAD": 40,
          "SSTORE": 19,
          "storageOps": 59
        }
      ],
      "recommendation": "Replay representative storage-heavy transactions against a Glamsterdam devnet or fork configuration when available."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 2,
          "LOG2": 8,
          "LOG3": 4,
          "LOG4": 1
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 23689,
          "opcodeKinds": 99
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps Foundry trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/foundry-json-trace.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 1
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps Hardhat trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/hardhat-debug-trace.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 6147
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps Multicall3 runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/multicall3-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "low",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.calldata-copy-exposure",
      "title": "Calldata copy opcode is present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.",
      "evidence": [
        {
          "CALLDATACOPY": 1
        }
      ],
      "recommendation": "Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 0,
          "LOG2": 1,
          "LOG3": 0,
          "LOG4": 0
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 3808,
          "opcodeKinds": 77
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps Nethermind-style trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/nethermind-debug-structlogs.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 2,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 1664
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 1,
          "CREATE2": 0
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 0,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps Safe Proxy Factory runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/safe-proxy-factory-v130-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 5,
    "highCount": 0,
    "mediumCount": 2,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.state-account-opcode-exposure",
      "title": "State and account access opcodes are prominent in bytecode",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.",
      "evidence": [
        {
          "sensitiveOpcodeCount": 11,
          "opcodeCounts": {
            "SLOAD": 3,
            "SSTORE": 1,
            "EXTCODESIZE": 1,
            "SHA3": 6
          }
        }
      ],
      "recommendation": "Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available."
    },
    {
      "id": "bytecode.calldata-copy-exposure",
      "title": "Calldata copy opcode is present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.",
      "evidence": [
        {
          "CALLDATACOPY": 6
        }
      ],
      "recommendation": "Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known."
    },
    {
      "id": "bytecode.contract-creation-opcodes",
      "title": "Contract creation opcodes are present",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "CREATE or CREATE2 appears in the bytecode. State-creation repricing candidates may affect factory, clone, deployment, or account-creation-heavy paths depending on final Glamsterdam scope.",
      "evidence": [
        {
          "CREATE": 1,
          "CREATE2": 1
        }
      ],
      "recommendation": "Identify representative deployment/factory transactions and add them to fork-readiness replay tests."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 2,
          "LOG2": 2,
          "LOG3": 1,
          "LOG4": 2
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 3774,
          "opcodeKinds": 87
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps USDC proxy runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/usdc-proxy-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 4,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.state-account-opcode-exposure",
      "title": "State and account access opcodes are prominent in bytecode",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.",
      "evidence": [
        {
          "sensitiveOpcodeCount": 9,
          "opcodeCounts": {
            "SLOAD": 2,
            "SSTORE": 3,
            "EXTCODESIZE": 1,
            "SELFBALANCE": 1,
            "SHA3": 2
          }
        }
      ],
      "recommendation": "Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available."
    },
    {
      "id": "bytecode.calldata-copy-exposure",
      "title": "Calldata copy opcode is present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.",
      "evidence": [
        {
          "CALLDATACOPY": 2
        }
      ],
      "recommendation": "Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 3,
          "LOG2": 0,
          "LOG3": 0,
          "LOG4": 1
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 2186,
          "opcodeKinds": 80
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps Uniswap V2 Factory runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/uniswap-v2-factory-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 6,
    "highCount": 0,
    "mediumCount": 3,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.state-account-opcode-exposure",
      "title": "State and account access opcodes are prominent in bytecode",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.",
      "evidence": [
        {
          "sensitiveOpcodeCount": 191,
          "opcodeCounts": {
            "SLOAD": 86,
            "SSTORE": 50,
            "BALANCE": 1,
            "EXTCODESIZE": 15,
            "SHA3": 39
          }
        }
      ],
      "recommendation": "Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available."
    },
    {
      "id": "bytecode.calldata-copy-exposure",
      "title": "Calldata copy opcode is present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.",
      "evidence": [
        {
          "CALLDATACOPY": 2
        }
      ],
      "recommendation": "Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known."
    },
    {
      "id": "bytecode.contract-creation-opcodes",
      "title": "Contract creation opcodes are present",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "CREATE or CREATE2 appears in the bytecode. State-creation repricing candidates may affect factory, clone, deployment, or account-creation-heavy paths depending on final Glamsterdam scope.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Identify representative deployment/factory transactions and add them to fork-readiness replay tests."
    },
    {
      "id": "bytecode.storage-heavy-pattern",
      "title": "Storage-related opcodes appear frequently",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8038"
      ],
      "description": "This bytecode contains many storage-related opcodes. Glamsterdam gas repricing candidates may change the cost profile of storage-heavy execution.",
      "evidence": [
        {
          "SLOAD": 86,
          "SSTORE": 50,
          "storageOps": 136
        }
      ],
      "recommendation": "Replay representative storage-heavy transactions against a Glamsterdam devnet or fork configuration when available."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 1,
          "LOG2": 3,
          "LOG3": 7,
          "LOG4": 0
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 13859,
          "opcodeKinds": 106
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps WETH9 runtime bytecode JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "bytecode",
    "name": "fixtures/bytecode/weth9-mainnet-runtime.hex"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 4,
    "highCount": 0,
    "mediumCount": 2,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "bytecode.state-account-opcode-exposure",
      "title": "State and account access opcodes are prominent in bytecode",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.",
      "evidence": [
        {
          "sensitiveOpcodeCount": 48,
          "opcodeCounts": {
            "SLOAD": 20,
            "SSTORE": 6,
            "BALANCE": 1,
            "EXTCODECOPY": 1,
            "SHA3": 20
          }
        }
      ],
      "recommendation": "Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available."
    },
    {
      "id": "bytecode.storage-heavy-pattern",
      "title": "Storage-related opcodes appear frequently",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8038"
      ],
      "description": "This bytecode contains many storage-related opcodes. Glamsterdam gas repricing candidates may change the cost profile of storage-heavy execution.",
      "evidence": [
        {
          "SLOAD": 20,
          "SSTORE": 6,
          "storageOps": 26
        }
      ],
      "recommendation": "Replay representative storage-heavy transactions against a Glamsterdam devnet or fork configuration when available."
    },
    {
      "id": "bytecode.log-opcodes-present",
      "title": "Log opcodes are present",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.",
      "evidence": [
        {
          "LOG0": 0,
          "LOG1": 1,
          "LOG2": 2,
          "LOG3": 3,
          "LOG4": 0
        }
      ],
      "recommendation": "Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters."
    },
    {
      "id": "bytecode.manual-review-required",
      "title": "Manual review is still required for runtime behavior",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING"
      ],
      "description": "The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.",
      "evidence": [
        {
          "byteLength": 3124,
          "opcodeKinds": 68
        }
      ],
      "recommendation": "Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations."
    }
  ],
  "assumptions": [
    "Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Static bytecode scanning cannot determine which branches are executed in production.",
    "Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.",
    "Findings are compatibility prompts, not predictions that a contract will fail."
  ]
}
"
`;

exports[`golden report snapshots > keeps bytecode Markdown report wording stable 1`] = `
"# Glamsterdam Compatibility Report

Target: bytecode fixtures/bytecode/storage-heavy.hex
Tool version: 0.3.2
Fork registry: glamsterdam

## Summary

Overall risk: MEDIUM
Findings: 6 total, 0 high, 3 medium, 2 low, 1 unknown

## Findings

### 1. State and account access opcodes are prominent in bytecode

Severity: MEDIUM
Confidence: medium
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-7904, EIP-8038, EIP-7976

This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.

Evidence:
- {"sensitiveOpcodeCount":13,"opcodeCounts":{"SLOAD":5,"SSTORE":5,"BALANCE":1,"EXTCODESIZE":1,"EXTCODEHASH":1}}

Recommendation: Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available.

### 2. Calldata copy opcode is present

Severity: LOW
Confidence: medium
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-7976, EIP-7904, EIP-8038

CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.

Evidence:
- {"CALLDATACOPY":1}

Recommendation: Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known.

### 3. Contract creation opcodes are present

Severity: MEDIUM
Confidence: high
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-8037

CREATE or CREATE2 appears in the bytecode. State-creation repricing candidates may affect factory, clone, deployment, or account-creation-heavy paths depending on final Glamsterdam scope.

Evidence:
- {"CREATE":1,"CREATE2":1}

Recommendation: Identify representative deployment/factory transactions and add them to fork-readiness replay tests.

### 4. Storage-related opcodes appear frequently

Severity: MEDIUM
Confidence: medium
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-8038

This bytecode contains many storage-related opcodes. Glamsterdam gas repricing candidates may change the cost profile of storage-heavy execution.

Evidence:
- {"SLOAD":5,"SSTORE":5,"storageOps":10}

Recommendation: Replay representative storage-heavy transactions against a Glamsterdam devnet or fork configuration when available.

### 5. Log opcodes are present

Severity: LOW
Confidence: medium
Domains: contracts, indexer, monitoring
Related EIPs: EIP-7708

The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.

Evidence:
- {"LOG0":0,"LOG1":1,"LOG2":0,"LOG3":0,"LOG4":0}

Recommendation: Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters.

### 6. Manual review is still required for runtime behavior

Severity: UNKNOWN
Confidence: low
Domains: contracts, execution
Related EIPs: GAS-REPRICING

The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.

Evidence:
- {"byteLength":56,"opcodeKinds":11}

Recommendation: Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations.

## Assumptions

- Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.
- The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.
- Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters.

## Limitations

- Static bytecode scanning cannot determine which branches are executed in production.
- Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.
- Findings are compatibility prompts, not predictions that a contract will fail.

"
`;

exports[`golden report snapshots > keeps call-tracer tree JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/call-tracer-tree.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 0,
          "explicitLogEntries": 1,
          "callOps": 3,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": true,
          "hasGasCostEvidence": false,
          "warnings": []
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps complete validator config JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "validator",
    "name": "fixtures/validator/operator-config-complete.yaml"
  },
  "summary": {
    "risk": "low",
    "findingCount": 0,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 0,
    "unknownCount": 0
  },
  "findings": [],
  "assumptions": [
    "Validator/operator readiness was checked from a local JSON/YAML config only.",
    "Client compatibility was compared against data/client-compat/clients.example.json. Unknown entries are reported without guessing.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change."
  ],
  "limitations": [
    "This scanner does not verify live node state, command-line flags, environment variables, firewall rules, or remote service health.",
    "Client compatibility must come from a maintained matrix with explicit source links.",
    "A clean report does not replace devnet/testnet participation or operational drills."
  ]
}
"
`;

exports[`golden report snapshots > keeps geth structLogs JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/geth-json-rpc-structlogs.json"
  },
  "summary": {
    "risk": "low",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 2,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 512
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 0,
          "maxDepth": 1
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps mixed explorer indexer JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "indexer",
    "name": "fixtures/indexers/explorer-replay-indexer.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 1,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 0,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "indexer.balance-diff-native-transfer-assumption",
      "title": "Indexer mentions balance-diff based native transfer handling",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The configuration mentions balance-diff based transfer handling. That can be a valid design, but it should be reviewed if native ETH transfer log proposals remain active or considered.",
      "evidence": [
        "Balance-diff marker found in configuration text."
      ],
      "recommendation": "Document whether native ETH transfers come from logs, balance diffs, traces, receipts, or a combined pipeline, and add replay tests for representative transfer cases."
    }
  ],
  "assumptions": [
    "JSON and YAML configs were parsed statically; subgraph-style handler fields were summarized when present.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change."
  ],
  "limitations": [
    "Static indexer configuration cannot prove runtime indexing behavior.",
    "Heuristics may miss compatibility logic implemented in code, environment variables, infrastructure manifests, or downstream pipelines.",
    "Findings marked heuristic should be treated as review prompts."
  ]
}
"
`;

exports[`golden report snapshots > keeps public devnet validator config JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "validator",
    "name": "fixtures/validator/glamsterdam-devnet-operator-public.yaml"
  },
  "summary": {
    "risk": "unknown",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 0,
    "unknownCount": 2
  },
  "findings": [
    {
      "id": "validator.execution-client-status-partial",
      "title": "execution client compatibility is partial",
      "severity": "unknown",
      "confidence": "high",
      "domain": [
        "validator"
      ],
      "relatedEips": [
        "EIP-7732"
      ],
      "description": "The compatibility matrix reports partial for geth ethpandaops/geth:bal-devnet-6. The scanner reports the matrix value without trying to override it.",
      "evidence": [
        {
          "role": "execution",
          "name": "geth",
          "version": "ethpandaops/geth:bal-devnet-6",
          "matrixEntry": {
            "version": "ethpandaops/geth:bal-devnet-6",
            "status": "partial",
            "source": {
              "type": "public-devnet-spec",
              "url": "https://notes.ethereum.org/@ethpandaops/glamsterdam-devnet-2",
              "retrievedAt": "2026-05-12",
              "claim": "The glamsterdam-devnet-2 Kurtosis example lists geth with image ethpandaops/geth:bal-devnet-6 as the execution-layer participant."
            },
            "notes": "Devnet image only. This is not a production Geth release compatibility claim."
          }
        }
      ],
      "recommendation": "Review the matrix source notes, update the client, or validate the status through testnet/devnet participation."
    },
    {
      "id": "validator.consensus-client-status-partial",
      "title": "consensus client compatibility is partial",
      "severity": "unknown",
      "confidence": "high",
      "domain": [
        "validator"
      ],
      "relatedEips": [
        "EIP-7732"
      ],
      "description": "The compatibility matrix reports partial for lighthouse ethpandaops/lighthouse:glamsterdam-devnet-3. The scanner reports the matrix value without trying to override it.",
      "evidence": [
        {
          "role": "consensus",
          "name": "lighthouse",
          "version": "ethpandaops/lighthouse:glamsterdam-devnet-3",
          "matrixEntry": {
            "version": "ethpandaops/lighthouse:glamsterdam-devnet-3",
            "status": "partial",
            "source": {
              "type": "public-devnet-spec",
              "url": "https://notes.ethereum.org/@ethpandaops/glamsterdam-devnet-2",
              "retrievedAt": "2026-05-12",
              "claim": "The glamsterdam-devnet-2 Kurtosis example lists lighthouse with image ethpandaops/lighthouse:glamsterdam-devnet-3 as a consensus-layer participant."
            },
            "notes": "Devnet image only. This is not a production Lighthouse release compatibility claim."
          }
        }
      ],
      "recommendation": "Review the matrix source notes, update the client, or validate the status through testnet/devnet participation."
    }
  ],
  "assumptions": [
    "Validator/operator readiness was checked from a local JSON/YAML config only.",
    "Client compatibility was compared against data/client-compat/clients.example.json. Unknown entries are reported without guessing.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change."
  ],
  "limitations": [
    "This scanner does not verify live node state, command-line flags, environment variables, firewall rules, or remote service health.",
    "Client compatibility must come from a maintained matrix with explicit source links.",
    "A clean report does not replace devnet/testnet participation or operational drills."
  ]
}
"
`;

exports[`golden report snapshots > keeps real Besu Tracoor trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/besu-mainnet-tracoor-debug-structlogs.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 4,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.state-heavy-execution-medium",
      "title": "Trace shows state-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "The executed trace includes repeated storage or state/account access operations. Glamsterdam repricing candidates may affect this cost profile, depending on final fork scope.",
      "evidence": [
        {
          "storageOps": 12,
          "sensitiveOpcodeCount": 12,
          "opcodeCounts": {
            "SLOAD": 10,
            "SSTORE": 2
          }
        }
      ],
      "recommendation": "Keep this trace as a regression fixture and replay it when final Glamsterdam client configurations are available."
    },
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 0
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": false,
          "hasGasCostEvidence": true,
          "warnings": [
            "Unwrapped JSON-RPC result object."
          ]
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps real Nethermind Tracoor trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/nethermind-mainnet-tracoor-debug-structlogs.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 4,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 2,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.state-heavy-execution-medium",
      "title": "Trace shows state-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "The executed trace includes repeated storage or state/account access operations. Glamsterdam repricing candidates may affect this cost profile, depending on final fork scope.",
      "evidence": [
        {
          "storageOps": 12,
          "sensitiveOpcodeCount": 12,
          "opcodeCounts": {
            "SLOAD": 10,
            "SSTORE": 2
          }
        }
      ],
      "recommendation": "Keep this trace as a regression fixture and replay it when final Glamsterdam client configurations are available."
    },
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "low",
      "confidence": "medium",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 0
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": false,
          "hasGasCostEvidence": true,
          "warnings": [
            "Unwrapped JSON-RPC result object."
          ]
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps real dRPC call-tracer JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/drpc-call-tracer-real.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 0,
          "calldataBytes": 4776
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 0,
          "explicitLogEntries": 0,
          "callOps": 36,
          "maxDepth": 5
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": true,
          "hasGasCostEvidence": false,
          "warnings": [
            "Unwrapped JSON-RPC result object."
          ]
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps reduced public subgraph indexer JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "indexer",
    "name": "fixtures/indexers/graph-network-subgraph-reduced.yaml"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 5,
    "highCount": 0,
    "mediumCount": 4,
    "lowCount": 0,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "indexer.event-only-assumption",
      "title": "Indexer appears to rely on event-only handlers",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "indexer"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "This looks like an event-only indexer configuration. Event-only pipelines should be reviewed for native ETH transfer visibility, balance-diff assumptions, and fork-specific log semantics if related EIPs remain active or considered.",
      "evidence": [
        {
          "eventHandlers": 4,
          "callHandlers": 0,
          "blockHandlers": 0
        }
      ],
      "recommendation": "Document how native ETH transfers are represented today, how they would be represented if transfer-log proposals are included, and how historical replay would be validated."
    },
    {
      "id": "indexer.native-eth-transfer-review-missing",
      "title": "No native ETH transfer handling metadata found",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708"
      ],
      "description": "The configuration does not mention native ETH transfers, balance diffs, or EIP-7708. Static config cannot determine whether the runtime indexer already handles this elsewhere.",
      "evidence": [
        "No native-transfer marker found in configuration text."
      ],
      "recommendation": "Add an explicit compatibility note or test plan for native ETH transfers, especially if dashboards or alerts currently infer transfers from balance diffs."
    },
    {
      "id": "indexer.missing-bal-readiness-metadata",
      "title": "No explicit Block-Level Access List readiness metadata found",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7928"
      ],
      "description": "The configuration does not mention BALs or EIP-7928. Static config cannot prove whether the indexer is incompatible, but explorer and indexer teams should explicitly track BAL ingestion and monitoring assumptions.",
      "evidence": [
        "No BAL/EIP-7928 marker found in configuration text."
      ],
      "recommendation": "Add fork-readiness metadata documenting whether BAL-related block data is ignored, stored, displayed, monitored, or replay-tested."
    },
    {
      "id": "indexer.missing-fork-compatibility-metadata",
      "title": "No explicit fork or EIP compatibility metadata found",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "indexer",
        "tooling"
      ],
      "relatedEips": [
        "EIP-7928",
        "EIP-7708"
      ],
      "description": "The config does not include explicit Glamsterdam, fork, or EIP compatibility metadata. That may be fine for older configs, but it makes readiness tracking harder.",
      "evidence": [
        "No Glamsterdam/fork/EIP/compatibility marker found in configuration text."
      ],
      "recommendation": "Add a small compatibility section that records reviewed EIPs, replay status, testnet/devnet coverage, and owner notes."
    },
    {
      "id": "indexer.missing-replay-plan",
      "title": "No replay, testnet, or devnet plan found",
      "severity": "medium",
      "confidence": "medium",
      "domain": [
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7928",
        "EIP-7708",
        "GAS-REPRICING"
      ],
      "description": "The config does not mention a replay or testnet/devnet plan. Indexer compatibility is usually validated by replaying representative data rather than by static config alone.",
      "evidence": [
        "No replay/testnet/devnet marker found in configuration text."
      ],
      "recommendation": "Add a replay plan that covers historical sync, recent blocks, expected reorg behavior, native ETH transfer handling, and BAL-related block data."
    }
  ],
  "assumptions": [
    "JSON and YAML configs were parsed statically; subgraph-style handler fields were summarized when present.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change."
  ],
  "limitations": [
    "Static indexer configuration cannot prove runtime indexing behavior.",
    "Heuristics may miss compatibility logic implemented in code, environment variables, infrastructure manifests, or downstream pipelines.",
    "Findings marked heuristic should be treated as review prompts."
  ]
}
"
`;

exports[`golden report snapshots > keeps trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/storage-heavy-trace.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 5,
    "highCount": 0,
    "mediumCount": 3,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.state-heavy-execution-medium",
      "title": "Trace shows state-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "The executed trace includes repeated storage or state/account access operations. Glamsterdam repricing candidates may affect this cost profile, depending on final fork scope.",
      "evidence": [
        {
          "storageOps": 12,
          "sensitiveOpcodeCount": 12,
          "opcodeCounts": {
            "SLOAD": 6,
            "SSTORE": 6
          }
        }
      ],
      "recommendation": "Keep this trace as a regression fixture and replay it when final Glamsterdam client configurations are available."
    },
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 8704
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": true,
          "hasGasCostEvidence": false,
          "warnings": []
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps validator builder-gap JSON report structure stable 1`] = `
"{
  "toolVersion": "0.3.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "validator",
    "name": "fixtures/validator/operator-config-builder-gap.yaml"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 3,
    "lowCount": 0,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "validator.builder-enabled-without-endpoint",
      "title": "Builder integration is enabled but no endpoint is configured",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "validator",
        "builder",
        "consensus"
      ],
      "relatedEips": [
        "EIP-7732"
      ],
      "description": "The config marks builder integration as enabled but does not include an endpoint. This may simply mean the local config is incomplete, so the scanner treats it as a readiness checklist item.",
      "evidence": [
        {
          "builderEnabled": true
        }
      ],
      "recommendation": "Add the intended builder endpoint or document why endpoint configuration is managed elsewhere."
    },
    {
      "id": "validator.missing-monitoring-endpoints",
      "title": "Monitoring endpoint metadata is incomplete",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "validator",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7732",
        "EIP-7928"
      ],
      "description": "The config does not include both Prometheus and Grafana monitoring metadata. Glamsterdam readiness should include observable EL, CL, validator, builder, and fork-specific metrics.",
      "evidence": [
        {
          "prometheus": "https://monitoring.example.invalid/prometheus"
        }
      ],
      "recommendation": "Record monitoring endpoints or dashboards and add alert coverage for devnet/testnet participation, missed duties, builder/API health, and sync status."
    },
    {
      "id": "validator.missing-testnet-participation",
      "title": "No testnet or devnet participation metadata found",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "validator",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7732",
        "EIP-7928"
      ],
      "description": "The config does not list Glamsterdam-oriented testnet or devnet participation. Operator readiness should be validated before mainnet activation timing is final.",
      "evidence": [
        {
          "testnetParticipation": []
        }
      ],
      "recommendation": "Add planned or completed testnet/devnet participation, including client versions, dates, observed issues, and rollback notes."
    }
  ],
  "assumptions": [
    "Validator/operator readiness was checked from a local JSON/YAML config only.",
    "Client compatibility was compared against data/client-compat/clients.example.json. Unknown entries are reported without guessing.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change."
  ],
  "limitations": [
    "This scanner does not verify live node state, command-line flags, environment variables, firewall rules, or remote service health.",
    "Client compatibility must come from a maintained matrix with explicit source links.",
    "A clean report does not replace devnet/testnet participation or operational drills."
  ]
}
"
`;
